<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--GROUP 1-->
    <group>
        <item android:id="@+id/nav_feed"
              android:icon="@drawable/ic_menu_feed"
              android:title="Feed">
        </item>

        <item android:id="@+id/nav_discover"
              android:icon="@drawable/ic_discover"
              android:title="@string/Discover">
        </item>

        <item android:id="@+id/nav_search"
              android:icon="@drawable/ic_search"
              android:title="@string/Search">
        </item>
    </group>

    <!--GROUP 2-->
    <item android:title="@string/Preferences">
        <menu>
            <item android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/Settings">
            </item>
        </menu>
    </item>

    <!--GROUP 3-->
    <item android:title="@string/Communicate">
        <menu>
            <item android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Share">
            </item>

            <item android:id="@+id/nav_info"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/Info">
            </item>
        </menu>
    </item>


    <item android:id="@+id/nav_logout"
        android:icon="@drawable/ic_menu_logout"
        android:title="@string/log_Out">
    </item>

</menu>