<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/general"
    android:backgroundTint="?attr/backgroundColor">


    <Button
        android:id="@+id/suggestions"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/improved"
        android:backgroundTint="@android:color/holo_purple"
        android:text="@string/Suggestions"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <Button
        android:id="@+id/terms"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/improved"
        android:backgroundTint="@android:color/holo_purple"
        android:text="@string/Terms_Of_Use"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593" />

    <Button
        android:id="@+id/updates"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textAllCaps="false"
        android:background="@drawable/improved"
        android:backgroundTint="@android:color/holo_purple"
        android:text="@string/Updates"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.766" />

    <Button
        android:id="@+id/reportProblem"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/improved"
        android:backgroundTint="@android:color/holo_purple"
        android:text="@string/Report_Problem"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262" />


</androidx.constraintlayout.widget.ConstraintLayout>